--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,8 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-    testImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+    //testImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+    testImplementation 'com.codeborne:selenide:6.17.2'
 }
 
 test {
